jjd06_logs_2019-02-11_17-28-54/log/build_v5_packed_properties.log
src/hs2715/step_world_v5_packed_properties.cpp:12:0: warning: "CL_USE_DEPRECATED_OPENCL_1_2_APIS" redefined
 #define CL_USE_DEPRECATED_OPENCL_1_2_APIS
 ^
<command-line>:0:0: note: this is the location of the previous definition
src/hs2715/step_world_v5_packed_properties.cpp: In function ‘void hpce::hs2715::kernel_xy(uint32_t, uint32_t, uint32_t, const float*, float*, float, float, const uint32_t*)’:
src/hs2715/step_world_v5_packed_properties.cpp:33:3: error: ‘buffer’ was not declared in this scope
   buffer[index]=world_state[index];
   ^
src/hs2715/step_world_v5_packed_properties.cpp:66:3: error: ‘buffer’ was not declared in this scope
   buffer[index] = res;
   ^
src/hs2715/step_world_v5_packed_properties.cpp: At global scope:
src/hs2715/step_world_v5_packed_properties.cpp:27:86: warning: unused parameter ‘er’ [-Wunused-parameter]
 void kernel_xy(uint32_t x, uint32_t y, uint32_t w, const float *world_state, float * er, float inner, float outer, const uint32_t *world_properties ){
                                                                                      ^
